wip allocations and record cache
Signed-off-by: Derek Riley <derek.riley@swirldslabs.com>